tests/ui/pattern/usefulness/slice-patterns-reachability.stderr
error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:8:9
   |
LL |         [true, ..] => {}
   |         ---------- matches all the values already
LL |         [true, ..] => {}
   |         ^^^^^^^^^^ unreachable pattern
   |
note: the lint level is defined here
  --> $DIR/slice-patterns-reachability.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:9:9
   |
LL |         [true, ..] => {}
   |         ---------- matches all the values already
LL |         [true, ..] => {}
LL |         [true] => {}
   |         ^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:14:9
   |
LL |         [.., true] => {}
   |         ---------- matches all the values already
LL |         [.., true] => {}
   |         ^^^^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:15:9
   |
LL |         [.., true] => {}
   |         ---------- matches all the values already
LL |         [.., true] => {}
LL |         [true] => {}
   |         ^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:20:9
   |
LL |         [false, .., true] => {}
   |         ----------------- matches all the values already
LL |         [false, .., true] => {}
   |         ^^^^^^^^^^^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/slice-patterns-reachability.rs:21:9
   |
LL |         [false, .., true] => {}
   |         ----------------- matches all the values already
LL |         [false, .., true] => {}
LL |         [false, true] => {}
   |         ^^^^^^^^^^^^^ unreachable pattern

error: aborting due to 6 previous errors

